tests/baselines/reference/literalTypesWidenInParameterPosition.errors.txt
literalTypesWidenInParameterPosition.ts(4,9): error TS2322: Type '5' is not assignable to type '1'.


==== literalTypesWidenInParameterPosition.ts (1 errors) ====
    class D {
        readonly noWiden = 1
        constructor(readonly widen = 2) {
            this.noWiden = 5; // error
            ~~~~~~~~~~~~
!!! error TS2322: Type '5' is not assignable to type '1'.
            this.widen = 6; // ok
        }
    }
    new D(7); // ok
    